--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,18 +23,28 @@ jobs:
 
       - name: Path Correction for GitHub Pages (Root to Repo-Relative)
         run: |
-          # 1. fetch() 경로는 작은따옴표('), 큰따옴표("), 백틱(`) 모두 대응
-          find . -type f -name "*.js" -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|fetch('/|fetch('/emart/|g" {} +
-          find . -type f -name "*.js" -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i 's|fetch("/|fetch("/emart/|g' {} +
-          find . -type f -name "*.js" -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|fetch(\`/|fetch(\`/emart/|g" {} +
-
-          # 2. HTML/JS에서 src="/...", href="/..." 패턴 처리 (따옴표 종류 모두 확인)
-          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i 's|src="/|src="/emart/|g' {} +
-          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|src='/|src='/emart/|g" {} +
-          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i 's|href="/|href="/emart/|g' {} +
-          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|href='/|href='/emart/|g" {} +
+          # 1. HTML/JS/CSS 파일에서 루트 상대 경로(/assets, /components 등)를 모두 /emart/ 경로로 변경
+          # 따옴표 종류(', ", `)와 관계없이 /폴더명/ 으로 시작하는 패턴을 모두 찾아 변경합니다.
+          # 대상 폴더: assets, components, pages, mobile
           
-          # 3. CSS/SCSS에서 url() 패턴 처리 (따옴표 없음, 작은따옴표, 큰따옴표)
+          # HTML 및 JS 파일 처리
+          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|'/assets/|'/emart/assets/|g" {} +
+          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i 's|"/assets/|"/emart/assets/|g' {} +
+          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|\`/assets/|\`/emart/assets/|g" {} +
+
+          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|'/components/|'/emart/components/|g" {} +
+          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i 's|"/components/|"/emart/components/|g' {} +
+          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|\`/components/|\`/emart/components/|g" {} +
+
+          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|'/pages/|'/emart/pages/|g" {} +
+          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i 's|"/pages/|"/emart/pages/|g' {} +
+          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|\`/pages/|\`/emart/pages/|g" {} +
+
+          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|'/mobile/|'/emart/mobile/|g" {} +
+          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i 's|"/mobile/|"/emart/mobile/|g' {} +
+          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|\`/mobile/|\`/emart/mobile/|g" {} +
+
+          # 2. CSS/SCSS에서 url() 패턴 처리
           find . -type f \( -name "*.css" -o -name "*.scss" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|url('/|url('/emart/|g" {} +
           find . -type f \( -name "*.css" -o -name "*.scss" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i 's|url("/|url("/emart/|g' {} +
           find . -type f \( -name "*.css" -o -name "*.scss" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i 's|url(/|url(/emart/|g' {} +
