--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,35 +19,27 @@ jobs:
       - name: Scss Compile
         run: |
           npm install -g sass
+          # assets/styles 폴더 내의 scss를 css로 컴파일
           sass assets/styles:assets/styles --no-source-map
 
-      - name: Path Correction for GitHub Pages (Root to Repo-Relative)
+      - name: Path Correction for GitHub Pages (Comprehensive)
         run: |
-          # 1. HTML/JS/CSS 파일에서 루트 상대 경로(/assets, /components 등)를 모두 /emart/ 경로로 변경
-          # 따옴표 종류(', ", `)와 관계없이 /폴더명/ 으로 시작하는 패턴을 모두 찾아 변경합니다.
-          # 대상 폴더: assets, components, pages, mobile
+          # 1. HTML 및 JS 파일 내의 모든 루트 상대 경로(/)를 /emart/ 경로로 치환
+          # 대상: assets, components, pages, mobile 폴더
+          # 패턴 설명: 따옴표(', ")나 백틱(`), 혹은 href=/ src=/ 뒤에 오는 경로를 찾아 /emart/를 삽입합니다.
           
-          # HTML 및 JS 파일 처리
-          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|'/assets/|'/emart/assets/|g" {} +
-          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i 's|"/assets/|"/emart/assets/|g' {} +
-          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|\`/assets/|\`/emart/assets/|g" {} +
+          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i \
+            "s|'/assets/|'/emart/assets/|g; s|\"/assets/|\"/emart/assets/|g; s|\`/assets/|\`/emart/assets/|g; \
+             s|'/components/|'/emart/components/|g; s|\"/components/|\"/emart/components/|g; s|\`/components/|\`/emart/components/|g; \
+             s|'/pages/|'/emart/pages/|g; s|\"/pages/|\"/emart/pages/|g; s|\`/pages/|\`/emart/pages/|g; \
+             s|'/mobile/|'/emart/mobile/|g; s|\"/mobile/|\"/emart/mobile/|g; s|\`/mobile/|\`/emart/mobile/|g; \
+             s|href=\"/|href=\"/emart/|g; s|src=\"/|src=\"/emart/|g" {} +
 
-          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|'/components/|'/emart/components/|g" {} +
-          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i 's|"/components/|"/emart/components/|g' {} +
-          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|\`/components/|\`/emart/components/|g" {} +
-
-          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|'/pages/|'/emart/pages/|g" {} +
-          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i 's|"/pages/|"/emart/pages/|g' {} +
-          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|\`/pages/|\`/emart/pages/|g" {} +
-
-          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|'/mobile/|'/emart/mobile/|g" {} +
-          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i 's|"/mobile/|"/emart/mobile/|g' {} +
-          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|\`/mobile/|\`/emart/mobile/|g" {} +
-
-          # 2. CSS/SCSS에서 url() 패턴 처리
-          find . -type f \( -name "*.css" -o -name "*.scss" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|url('/|url('/emart/|g" {} +
-          find . -type f \( -name "*.css" -o -name "*.scss" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i 's|url("/|url("/emart/|g' {} +
-          find . -type f \( -name "*.css" -o -name "*.scss" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i 's|url(/|url(/emart/|g' {} +
+          # 2. CSS/SCSS 내의 url() 패턴 처리
+          # url('/assets/...') 또는 url(/assets/...) 형태를 모두 처리합니다.
+          find . -type f \( -name "*.css" -o -name "*.scss" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i \
+            "s|url(['\"]\{0,1\}\/assets/|url('/emart/assets/|g; \
+             s|url(['\"]\{0,1\}\/components/|url('/emart/components/|g" {} +
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
