--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,27 +19,35 @@ jobs:
       - name: Scss Compile
         run: |
           npm install -g sass
-          # assets/styles 폴더 내의 scss를 css로 컴파일
           sass assets/styles:assets/styles --no-source-map
 
-      - name: Path Correction for GitHub Pages (Safe & Anti-Duplicate)
+      - name: Path Correction for GitHub Pages (Root to Repo-Relative)
         run: |
-          # 1. HTML/JS 내의 주요 폴더 경로 치환
-          # 중복 방지를 위해 폴더명 앞에 /emart/가 없는 경우만 타겟팅합니다.
-          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i \
-            "s|'\/\(assets\|components\|pages\|mobile\)\/|'\/emart\/\1\/|g; \
-             s|\"\/\(assets\|components\|pages\|mobile\)\/|\"\/emart\/\1\/|g; \
-             s|\`\/\(assets\|components\|pages\|mobile\)\/|\`\/emart\/\1\/|g; \
-             s|href=\"\/\(assets\|components\|pages\|mobile\)\/|href=\"\/emart\/\1\/|g; \
-             s|src=\"\/\(assets\|components\|pages\|mobile\)\/|src=\"\/emart\/\1\/|g" {} +
+          # 1. HTML/JS/CSS 파일에서 루트 상대 경로(/assets, /components 등)를 모두 /emart/ 경로로 변경
+          # 따옴표 종류(', ", `)와 관계없이 /폴더명/ 으로 시작하는 패턴을 모두 찾아 변경합니다.
+          # 대상 폴더: assets, components, pages, mobile
+          
+          # HTML 및 JS 파일 처리
+          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|'/assets/|'/emart/assets/|g" {} +
+          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i 's|"/assets/|"/emart/assets/|g' {} +
+          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|\`/assets/|\`/emart/assets/|g" {} +
 
-          # 2. CSS/SCSS url() 경로 치환
-          find . -type f \( -name "*.css" -o -name "*.scss" \) -not -path "*/node_modules/*" -exec sed -i \
-            "s|url(['\"]\{0,1\}\/\(assets\|components\)\/|url('/emart/\1/|g" {} +
+          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|'/components/|'/emart/components/|g" {} +
+          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i 's|"/components/|"/emart/components/|g' {} +
+          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|\`/components/|\`/emart/components/|g" {} +
 
-          # 3. [핵심 안전장치] 이미 중복된 emart/emart 경로가 있다면 하나로 통합
-          # 이 단계가 emart/emart 문제를 직접적으로 해결합니다.
-          find . -type f \( -name "*.html" -o -name "*.js" -o -name "*.css" -o -name "*.scss" \) -not -path "*/node_modules/*" -exec sed -i "s|/emart/emart/|/emart/|g" {} +
+          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|'/pages/|'/emart/pages/|g" {} +
+          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i 's|"/pages/|"/emart/pages/|g' {} +
+          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|\`/pages/|\`/emart/pages/|g" {} +
+
+          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|'/mobile/|'/emart/mobile/|g" {} +
+          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i 's|"/mobile/|"/emart/mobile/|g' {} +
+          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|\`/mobile/|\`/emart/mobile/|g" {} +
+
+          # 2. CSS/SCSS에서 url() 패턴 처리
+          find . -type f \( -name "*.css" -o -name "*.scss" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|url('/|url('/emart/|g" {} +
+          find . -type f \( -name "*.css" -o -name "*.scss" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i 's|url("/|url("/emart/|g' {} +
+          find . -type f \( -name "*.css" -o -name "*.scss" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i 's|url(/|url(/emart/|g' {} +
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
