--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,27 +27,31 @@ jobs:
           # 따옴표 종류(', ", `)와 관계없이 /폴더명/ 으로 시작하는 패턴을 모두 찾아 변경합니다.
           # 대상 폴더: assets, components, pages, mobile
           
-          # HTML 및 JS 파일 처리
-          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|'/assets/|'/emart/assets/|g" {} +
-          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i 's|"/assets/|"/emart/assets/|g' {} +
-          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|\`/assets/|\`/emart/assets/|g" {} +
+          # HTML, JS 및 TXT 파일 처리
+          find . -type f \( -name "*.html" -o -name "*.js" -o -name "*.txt" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|'/assets/|'/emart/assets/|g" {} +
+          find . -type f \( -name "*.html" -o -name "*.js" -o -name "*.txt" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i 's|"/assets/|"/emart/assets/|g' {} +
+          find . -type f \( -name "*.html" -o -name "*.js" -o -name "*.txt" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|\`/assets/|\`/emart/assets/|g" {} +
 
-          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|'/components/|'/emart/components/|g" {} +
-          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i 's|"/components/|"/emart/components/|g' {} +
-          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|\`/components/|\`/emart/components/|g" {} +
+          find . -type f \( -name "*.html" -o -name "*.js" -o -name "*.txt" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|'/components/|'/emart/components/|g" {} +
+          find . -type f \( -name "*.html" -o -name "*.js" -o -name "*.txt" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i 's|"/components/|"/emart/components/|g' {} +
+          find . -type f \( -name "*.html" -o -name "*.js" -o -name "*.txt" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|\`/components/|\`/emart/components/|g" {} +
 
-          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|'/pages/|'/emart/pages/|g" {} +
-          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i 's|"/pages/|"/emart/pages/|g' {} +
-          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|\`/pages/|\`/emart/pages/|g" {} +
+          find . -type f \( -name "*.html" -o -name "*.js" -o -name "*.txt" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|'/pages/|'/emart/pages/|g" {} +
+          find . -type f \( -name "*.html" -o -name "*.js" -o -name "*.txt" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i 's|"/pages/|"/emart/pages/|g' {} +
+          find . -type f \( -name "*.html" -o -name "*.js" -o -name "*.txt" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|\`/pages/|\`/emart/pages/|g" {} +
 
-          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|'/mobile/|'/emart/mobile/|g" {} +
-          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i 's|"/mobile/|"/emart/mobile/|g' {} +
-          find . -type f \( -name "*.html" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|\`/mobile/|\`/emart/mobile/|g" {} +
+          find . -type f \( -name "*.html" -o -name "*.js" -o -name "*.txt" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|'/mobile/|'/emart/mobile/|g" {} +
+          find . -type f \( -name "*.html" -o -name "*.js" -o -name "*.txt" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i 's|"/mobile/|"/emart/mobile/|g' {} +
+          find . -type f \( -name "*.html" -o -name "*.js" -o -name "*.txt" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|\`/mobile/|\`/emart/mobile/|g" {} +
 
-          # 2. CSS/SCSS에서 url() 패턴 처리
-          find . -type f \( -name "*.css" -o -name "*.scss" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|url('/|url('/emart/|g" {} +
-          find . -type f \( -name "*.css" -o -name "*.scss" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i 's|url("/|url("/emart/|g' {} +
-          find . -type f \( -name "*.css" -o -name "*.scss" -o -name "*.js" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i 's|url(/|url(/emart/|g' {} +
+          # 루트 경로 (/) 처리 - href="/" 등을 href="/emart/" 로 변경
+          find . -type f \( -name "*.html" -o -name "*.js" -o -name "*.txt" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i 's|href="/"|href="/emart/"|g' {} +
+          find . -type f \( -name "*.html" -o -name "*.js" -o -name "*.txt" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|href='/'|href='/emart/'|g" {} +
+
+          # 2. CSS/SCSS 및 JS/TXT에서 url() 패턴 처리
+          find . -type f \( -name "*.css" -o -name "*.scss" -o -name "*.js" -o -name "*.txt" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i "s|url('/|url('/emart/|g" {} +
+          find . -type f \( -name "*.css" -o -name "*.scss" -o -name "*.js" -o -name "*.txt" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i 's|url("/|url("/emart/|g' {} +
+          find . -type f \( -name "*.css" -o -name "*.scss" -o -name "*.js" -o -name "*.txt" \) -not -path "*/node_modules/*" -not -path "*/.git/*" -exec sed -i 's|url(/|url(/emart/|g' {} +
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
